Added card views and previous image, fixed footer

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         <h1 class="home__hi">Hello and <span class="home__welcome-text">Welcome</span></h1> 
         <h1 class="home__welcome">to The Random Image Generator!</h1>
         <p class="home__desc">Just scroll down and enjoy absolutely random images from the internet.</p>
-        <a href="#root"><i class="fas fa-angle-down arrow"></i></a>
+        <a href="#root"><i class="fas fa-angle-down home__arrow"></i></a>
     </div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
