Implemented responsive design

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
           <i class="fab fa-github fa-2x"></i>
         </a>
       </div>
-      <span class="footer-copy">&copy; Copyright 2020</span>
+      <span class="footer-copy">&copy; Mantas Jakaitis Copyright 2020</span>
     </div>
     <script src="https://kit.fontawesome.com/496b21e0f9.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
